<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AddEditNoteActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/white"
            android:background="@color/purple"
            app:menu="@menu/top_app_bar_settings"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:max="3"
        android:progress="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/idEdtNoteDesc" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/notification_frequency"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEdtNoteDesc" />

    <EditText
        android:id="@+id/idEdtNoteName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prayer_name"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar" />

    <EditText
        android:id="@+id/idEdtNoteDesc"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/prayer_description"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:inputType="textMultiLine"
        android:singleLine="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEdtNoteName" />

    <RadioGroup
        android:id="@+id/rbGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar">

        <RadioButton
            android:id="@+id/rbPermanent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permanent"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbExpires"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expires"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbFixed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fixed_number"
            android:textColor="@color/white" />
    </RadioGroup>

    <EditText
        android:id="@+id/etDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="dd/mm/yyyy"
        android:visibility="invisible"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/rbGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rbGroup"
        app:layout_constraintTop_toTopOf="@+id/rbGroup" />

    <Button
        android:id="@+id/idBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@drawable/custom_button_back"
        android:text="Button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:text="5"
        android:textColor="@color/white"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/rbGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rbGroup"
        app:layout_constraintTop_toTopOf="@+id/rbGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>